# polkadot-sdk

./: Cargo.toml  benchmark.sh
cumulus/parachain-template/node/src/: chain_spec.rs
cumulus/parachains/integration-tests/emulated/common/src/: lib.rs
cumulus/polkadot-parachain/src/: service.rs
cumulus/polkadot-parachain/src/chain_spec/: mod.rs
cumulus/xcm/xcm-emulator/src/: lib.rs
polkadot/node/collation-generation/src/: lib.rs
polkadot/node/service/src/: chain_spec.rs  lib.rs
substrate/client/authority-discovery/src/: worker.rs
substrate/client/cli/src/commands/: utils.rs  verify.rs
substrate/client/consensus/aura/src/: standalone.rs
substrate/client/consensus/babe/src/: verification.rs
substrate/client/consensus/sassafras/: Cargo.toml
substrate/client/consensus/sassafras/src/: authorship.rs  aux_schema.rs  block_import.rs  lib.rs  tests.rs  verification.rs
substrate/frame/aura/src/: lib.rs
substrate/frame/sassafras/src/: lib.rs
substrate/frame/session/src/: lib.rs
substrate/primitives/application-crypto/src/: bandersnatch.rs  bls377.rs  bls381.rs  lib.rs
substrate/primitives/consensus/sassafras/src/: lib.rs  vrf.rs
substrate/primitives/core/: Cargo.toml
substrate/primitives/core/src/: bandersnatch.rs  bls.rs  crypto.rs  ecdsa.rs  ed25519.rs  lib.rs  paired_crypto.rs  sr25519.rs
substrate/primitives/io/src/: lib.rs
substrate/primitives/keyring/src/: ed25519.rs
substrate/primitives/runtime/src/: lib.rs  traits.rs
templates/solochain/node/: Cargo.toml
templates/solochain/node/src/: chain_spec.rs  command.rs  service.rs
templates/solochain/runtime/: Cargo.toml
templates/solochain/runtime/src/: lib.rs
