[package]
name = "sc-consensus-sassafras"
version = "0.3.4-dev"
authors.workspace = true
description = "Sassafras consensus algorithm for substrate"
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/sc-consensus-sassafras"
readme = "README.md"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true }
codec = { features = ["derive"], workspace = true, default-features = true }
futures = { workspace = true }
log = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }
thiserror = { workspace = true }
fork-tree = { workspace = true, default-features = true }
prometheus-endpoint = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-consensus = { workspace = true, default-features = true }
sc-consensus-epochs = { workspace = true, default-features = true }
sc-consensus-slots = { workspace = true, default-features = true }
sc-telemetry = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-application-crypto = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sp-consensus-sassafras = { workspace = true, default-features = true }
sp-consensus-slots = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-timestamp = { workspace = true, default-features = true }

[dev-dependencies]
sc-block-builder = { workspace = true, default-features = true }
sc-keystore = { workspace = true, default-features = true }
sc-network-test = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
substrate-test-runtime-client = { workspace = true, default-features = true }
tokio = { workspace = true, default-feaures = true }
env_logger = { workspace = true, default-features = true }
